--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -1,21 +1,21 @@
-name: Publish Website to CPanel
+name: Auto Deploy to cPanel
+
 on:
   push:
     branches:
-      - main
-
+      - main  # Change to your default branch
 
 jobs:
-  FTP-Deploy-Action:
-    name: FTP-Deploy-Action
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2.1.0
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Upload files to cPanel
+      uses: SamKirkland/FTP-Deploy-Action@4.5.0
       with:
-        fetch-depth: 2
-    - name: FTP-Deploy-Action
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        ftp-server: $({ secrets.FTP_SERVER }}
-        ftp-username: $({ secrets.FTP_USERNAME }}
-        ftp-password: $({ secrets.FTP_PASSWORD })
+        server: ftp.thysics.org  # Replace with your cPanel FTP server
+        username: ${{ secrets.CPANEL_USERNAME }}
+        password: ${{ secrets.CPANEL_PASSWORD }}
