--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -17,5 +17,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         ftp-server: ${{ secrets.FTP_SERVER }}  # Replace with your cPanel FTP server
-        ftp-username: ${{ secrets.CPANEL_USERNAME }}
-        ftp-password: ${{ secrets.CPANEL_PASSWORD }}
+        ftp-username: ${{ secrets.FTP_USERNAME }}
+        ftp-password: ${{ secrets.FTP_PASSWORD }}
